# curse_work_3

./: .gitignore  main.py  pyproject.toml
tests/: test_functions.py  test_operation.py
utils/: functions.py  operation.py
