[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = "trial project"
authors = ["Sergey Atkov <bersercwow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
